--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     
     <!-- Meta tags para WhatsApp/Redes Sociales -->    <meta property="og:title" content="Invitación de Boda - Luz & Guillermo" />
     <meta property="og:description" content="¡Están invitados a nuestra boda! Una celebración especial llena de amor y alegría." />
-    <meta property="og:image" content="/luzGuille.jpg" />
+    <meta property="og:image" content="/casamiento.png" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
     <meta property="og:url" content="https://casamiento-omega.vercel.app/" /> 
@@ -20,7 +20,7 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Invitación de Boda - Luz & Guillermo" />
     <meta name="twitter:description" content="¡Están invitados a nuestra boda! Una celebración especial llena de amor y alegría." />
-    <meta name="twitter:image" content="/luzGuille.jpg" />
+    <meta name="twitter:image" content="/casamiento.png" />
     
     <meta name="description" content="Celebra con nosotros nuestro matrimonio. Una noche llena de amor, música y alegría." />
   </head>
